Monitor screen now works with HUD to make it more clear

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -201,6 +201,8 @@ LastLevel=/Game/FirstPersonMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 OpenAssetsAtExit=/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen
+OpenAssetsAtExit=/Game/UserInterface/WBP_HUD.WBP_HUD
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -924,6 +926,36 @@ WidgetComponent.Tags=True
 WidgetComponent.ComponentReplication=True
 WidgetComponent.Cooking=True
 WidgetComponent.Events=True
+WBP_MonitorScreen_C.Layout=True
+WBP_MonitorScreen_C.Appearance=True
+WBP_MonitorScreen_C.Accessibility=True
+WBP_MonitorScreen_C.Input=True
+WBP_MonitorScreen_C.Interaction=True
+WBP_MonitorScreen_C.Performance=True
+WBP_MonitorScreen_C.Behavior=True
+WBP_MonitorScreen_C.Render Transform=True
+WBP_MonitorScreen_C.Clipping=True
+WBP_MonitorScreen_C.Navigation=True
+WBP_MonitorScreen_C.Localization=True
+WBP_MonitorScreen_C.Events=True
+SizeBox.Layout=True
+SizeBox.Child Layout=True
+SizeBox.Accessibility=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Clipping=True
+SizeBox.Navigation=True
+SizeBox.Localization=True
+ScaleBox.Layout=True
+ScaleBox.Stretching=True
+ScaleBox.Accessibility=True
+ScaleBox.Behavior=True
+ScaleBox.Render Transform=True
+ScaleBox.Performance=True
+ScaleBox.Clipping=True
+ScaleBox.Navigation=True
+ScaleBox.Localization=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -931,9 +963,9 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Objec
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Background\" "
-Visual="\"Object.Appearance.Background\" "
-Object="\"Object.Appearance.Background\" "
+Widget=
+Visual=
+Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -951,10 +983,10 @@ K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node="\"Object.PinOptions.PinNames\" "
 EdGraphNode=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 CineCameraComponent="\"Object.Current Camera Settings.LensSettings\" \"Object.Current Camera Settings.FocusSettings\" \"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 CineCameraActor="\"Object.CameraActor.CameraComponent.Object.Current Camera Settings.FocusSettings\" \"Object.Actor.Tags\" "
@@ -969,14 +1001,14 @@ PanelWidget="\"Object.Appearance.Background\" "
 WidgetComponent="\"Object.Tags.ComponentTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UserInterface/WBP_MonitorScreen
-MRUItem1=/Game/Blueprints/BPC_Desk1
-MRUItem2=/Game/FirstPersonMap
-MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem4=/Game/Main
-MRUItem5=/Game/Blueprints/BP_DeskMaster
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem7=/Game/UserInterface/WBP_HUD
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/UserInterface/WBP_HUD
+MRUItem2=/Game/UserInterface/WBP_MonitorScreen
+MRUItem3=/Game/Blueprints/BPC_Desk1
+MRUItem4=/Game/FirstPersonMap
+MRUItem5=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem6=/Game/Main
+MRUItem7=/Game/Blueprints/BP_DeskMaster
 MRUItem8=/Game/OfficeScene/Maps/tests
 MRUItem9=/Game/FirstPerson/Input/IMC_SittingDown
 MRUItem10=/Game/FirstPerson/Input/Actions/IA_StandUp
@@ -2192,11 +2224,11 @@ K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostPro
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
-SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 UserDefinedStruct=UserDefinedStruct.Structure.AE03DC9346529D8EC318B981AF4834A3,UserDefinedStruct.Structure.4933E9B84B84FFA52EA3AE9DFAA4993B,UserDefinedStruct.Structure.5EE7EFC04199F44ED9DED0A5EBAFCDF8,UserDefinedStruct.Structure.05B150D747338CCE3D2D1F90F8DD1BDD,
 BPS_InteractableActorStructure=
@@ -2213,6 +2245,8 @@ CineCameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostPr
 CineCameraActor=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 WidgetInteractionComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 Brush=PostProcessVolume.Rendering Features.Rendering Features,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+WBP_HUD_C=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 
 [PlacementMode]
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
@@ -2399,4 +2433,18 @@ MRUItem0=/Game/FirstPersonMap
 MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
 MRUItem2=/Game/Main
 MRUItem3=/Game/OfficeScene/Maps/tests
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
