--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -198,11 +198,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
-OpenAssetsAtExit=/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen
-OpenAssetsAtExit=/Game/UserInterface/WBP_HUD.WBP_HUD
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1001,10 +999,10 @@ PanelWidget="\"Object.Appearance.Background\" "
 WidgetComponent="\"Object.Tags.ComponentTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/UserInterface/WBP_HUD
-MRUItem2=/Game/UserInterface/WBP_MonitorScreen
-MRUItem3=/Game/Blueprints/BPC_Desk1
+MRUItem0=/Game/Blueprints/BPC_Desk1
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/UserInterface/WBP_HUD
+MRUItem3=/Game/UserInterface/WBP_MonitorScreen
 MRUItem4=/Game/FirstPersonMap
 MRUItem5=/Game/FirstPerson/Maps/FirstPersonMap
 MRUItem6=/Game/Main
@@ -2224,7 +2222,7 @@ K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostPro
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
@@ -2247,6 +2245,9 @@ WidgetInteractionComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags
 Brush=PostProcessVolume.Rendering Features.Rendering Features,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 WBP_HUD_C=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+PlayerController=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+UpdateCursor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+UpdateCursor_6=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 
 [PlacementMode]
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
