--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -154,6 +154,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=1
 GridEnabled=False
 RotGridEnabled=False
+CurrentScalingGridSize=6
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -171,7 +172,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -198,9 +199,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen
+OpenAssetsAtExit=/Game/UserInterface/PC/WBP_Desktop.WBP_Desktop
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
+OpenAssetsAtExit=/Game/UserInterface/WBP_HUD.WBP_HUD
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -954,15 +957,56 @@ ScaleBox.Performance=True
 ScaleBox.Clipping=True
 ScaleBox.Navigation=True
 ScaleBox.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+WBP_Desktop_C.Layout=True
+WBP_Desktop_C.Appearance=True
+WBP_Desktop_C.Accessibility=True
+WBP_Desktop_C.Input=True
+WBP_Desktop_C.Interaction=True
+WBP_Desktop_C.Performance=True
+WBP_Desktop_C.Behavior=True
+WBP_Desktop_C.Render Transform=True
+WBP_Desktop_C.Clipping=True
+WBP_Desktop_C.Navigation=True
+WBP_Desktop_C.Localization=True
+WBP_Desktop_C.Events=True
+WBP_HUD_C.Appearance=True
+WBP_HUD_C.Designer=True
+WBP_HUD_C.Input=True
+WBP_HUD_C.Interaction=True
+WBP_HUD_C.Performance=True
+WBP_HUD_C.Layout=True
+WBP_HUD_C.Behavior=True
+WBP_HUD_C.Render Transform=True
+WBP_HUD_C.Localization=True
+WBP_HUD_C.Accessibility=True
+WBP_HUD_C.Clipping=True
+WBP_HUD_C.Navigation=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Widget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Visual="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -981,7 +1025,7 @@ K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node="\"Object.PinOptions.PinNames\" "
 EdGraphNode=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
-MeshComponent=
+MeshComponent="\"Object.UserInterface.DrawSize\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -993,30 +1037,36 @@ ArrowComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 WidgetInteractionComponent="\"Object.Tags.ComponentTags\" "
-Border="\"Object.Appearance.Background\" "
-ContentWidget="\"Object.Appearance.Background\" "
-PanelWidget="\"Object.Appearance.Background\" "
-WidgetComponent="\"Object.Tags.ComponentTags\" "
+Border="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+ContentWidget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+PanelWidget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+WidgetComponent="\"Object.UserInterface.DrawSize\" \"Object.Tags.ComponentTags\" "
+Image="\"Object.Appearance.Brush\" "
+SizeBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+WBP_MonitorScreen_C="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+UserWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+WBP_Desktop_C="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BPC_Desk1
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/UserInterface/WBP_HUD
+MRUItem0=/Game/UserInterface/WBP_HUD
+MRUItem1=/Game/Blueprints/BPC_Desk1
+MRUItem2=/Game/UserInterface/PC/WBP_Desktop
 MRUItem3=/Game/UserInterface/WBP_MonitorScreen
-MRUItem4=/Game/FirstPersonMap
-MRUItem5=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem6=/Game/Main
-MRUItem7=/Game/Blueprints/BP_DeskMaster
-MRUItem8=/Game/OfficeScene/Maps/tests
-MRUItem9=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem10=/Game/FirstPerson/Input/Actions/IA_StandUp
-MRUItem11=/Game/FirstPerson/Input/IMC_Walking
-MRUItem12=/Game/FirstPerson/Input/PMIC_Default
-MRUItem13=/Game/FirstPerson/Input/IMC_Default
-MRUItem14=/Game/FirstPerson/Input/IMC_Weapons
-MRUItem15=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem16=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem17=/Game/Materials/M_HighlightMat
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/FirstPersonMap
+MRUItem6=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem7=/Game/Main
+MRUItem8=/Game/Blueprints/BP_DeskMaster
+MRUItem9=/Game/OfficeScene/Maps/tests
+MRUItem10=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem11=/Game/FirstPerson/Input/Actions/IA_StandUp
+MRUItem12=/Game/FirstPerson/Input/IMC_Walking
+MRUItem13=/Game/FirstPerson/Input/PMIC_Default
+MRUItem14=/Game/FirstPerson/Input/IMC_Default
+MRUItem15=/Game/FirstPerson/Input/IMC_Weapons
+MRUItem16=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem17=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem18=/Game/Materials/M_HighlightMat
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2213,7 +2263,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
-BrushComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+BrushComponent=PostProcessVolume.Rendering Features.Rendering Features,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,
@@ -2224,7 +2274,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
