--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/UserInterface
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -199,11 +199,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen
-OpenAssetsAtExit=/Game/UserInterface/PC/WBP_Desktop.WBP_Desktop
-OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
-OpenAssetsAtExit=/Game/UserInterface/WBP_HUD.WBP_HUD
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1164,6 +1160,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 /Game/FirstPerson/Input/IMC_Walking.IMC_Walking=1
 /Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp=1
 /Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen=0
+/Game/UserInterface/PC/WBP_Desktop.WBP_Desktop=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2263,7 +2260,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
-BrushComponent=PostProcessVolume.Rendering Features.Rendering Features,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+BrushComponent=
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,
