--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@HUSKYCOMP23
 LastExecutedLaunchName=HUSKYCOMP23
 LastExecutedPIEPreviewDevice=
@@ -200,9 +200,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_MainMenu.WBP_MainMenu
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1095,7 +1094,7 @@ TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 Widget="\"Object.Appearance.Brush\" "
 Visual="\"Object.Appearance.Brush\" "
-Object="\"Object.Appearance.Brush\" "
+Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -1138,8 +1137,8 @@ HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.
 Button=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UserInterface/Menues/WBP_MainMenu
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/UserInterface/Menues/WBP_MainMenu
 MRUItem2=/Game/Blueprints/GameInstance/GI_MainGameInstance
 MRUItem3=/Game/Blueprints/BPC_Desk1
 MRUItem4=/Game/Blueprints/Menu/BP_Spawn
