WBP_MainMenu added Quit and Options button functionality

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -201,7 +201,6 @@ LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_MainMenu.WBP_MainMenu
 
 [DetailCategories]
@@ -1086,13 +1085,25 @@ BP_Spawn_C.Input=True
 BP_Spawn_C.Actor=True
 BP_Spawn_C.Tick=True
 BP_Spawn_C.Events=True
+WBP_MainMenu_C.Appearance=True
+WBP_MainMenu_C.Designer=True
+WBP_MainMenu_C.Input=True
+WBP_MainMenu_C.Interaction=True
+WBP_MainMenu_C.Performance=True
+WBP_MainMenu_C.Layout=True
+WBP_MainMenu_C.Behavior=True
+WBP_MainMenu_C.Render Transform=True
+WBP_MainMenu_C.Localization=True
+WBP_MainMenu_C.Accessibility=True
+WBP_MainMenu_C.Clipping=True
+WBP_MainMenu_C.Navigation=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" "
 Widget=
 Visual=
 Object=
@@ -1125,9 +1136,9 @@ ArrowComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 WidgetInteractionComponent="\"Object.Tags.ComponentTags\" "
-Border="\"Object.Appearance.Background\" "
-ContentWidget=
-PanelWidget=
+Border="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+ContentWidget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+PanelWidget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 WidgetComponent="\"Object.UserInterface.DrawSize\" \"Object.Tags.ComponentTags\" "
 Image="\"Object.Appearance.Brush\" "
 SizeBox=
@@ -2406,6 +2417,7 @@ ChangeCamera=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVo
 ChangeCamera_5=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 GI_MainGameInstance_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 EdGraphNode=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,
+WBP_MainMenu_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 
 [PlacementMode]
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
